# ai-governance-framework

./: .gitignore  Makefile  README.md  pyproject.toml
src/: __init__.py  audit_logger.py  compliance_checker.py  model_card_generator.py  risk_assessor.py
templates/model_cards/: default_template.yaml
templates/policies/: ai_usage_policy.yaml
tests/: test_audit_logger.py  test_compliance_checker.py  test_risk_assessor.py
